--- a/deploy/crds/planetscale.com_vitesscells.yaml
+++ b/deploy/crds/planetscale.com_vitesscells.yaml
@@ -1144,6 +1144,8 @@ spec:
                         type: object
                       clusterIP:
                         type: string
+                      name:
+                        type: string
                     type: object
                   sidecarContainers:
                     x-kubernetes-preserve-unknown-fields: true
@@ -1244,6 +1246,8 @@ spec:
                               type: string
                             type: object
                           clusterIP:
+                            type: string
+                          name:
                             type: string
                         type: object
                       createClientService:
@@ -1465,6 +1469,8 @@ spec:
                               type: string
                             type: object
                           clusterIP:
+                            type: string
+                          name:
                             type: string
                         type: object
                       resources:
