--- a/deploy/crds/planetscale.com_vitessclusters.yaml
+++ b/deploy/crds/planetscale.com_vitessclusters.yaml
@@ -1822,6 +1822,8 @@ spec:
                               type: object
                             clusterIP:
                               type: string
+                            name:
+                              type: string
                           type: object
                         sidecarContainers:
                           x-kubernetes-preserve-unknown-fields: true
@@ -1876,6 +1878,8 @@ spec:
                                     type: string
                                   type: object
                                 clusterIP:
+                                  type: string
+                                name:
                                   type: string
                               type: object
                             createClientService:
@@ -2098,6 +2102,8 @@ spec:
                                   type: object
                                 clusterIP:
                                   type: string
+                                name:
+                                  type: string
                               type: object
                             resources:
                               properties:
@@ -2174,6 +2180,8 @@ spec:
                     type: object
                   clusterIP:
                     type: string
+                  name:
+                    type: string
                 type: object
               globalLockserver:
                 properties:
@@ -2200,6 +2208,8 @@ spec:
                               type: string
                             type: object
                           clusterIP:
+                            type: string
+                          name:
                             type: string
                         type: object
                       createClientService:
@@ -2421,6 +2431,8 @@ spec:
                               type: string
                             type: object
                           clusterIP:
+                            type: string
+                          name:
                             type: string
                         type: object
                       resources:
@@ -3617,6 +3629,8 @@ spec:
                               type: object
                             clusterIP:
                               type: string
+                            name:
+                              type: string
                           type: object
                         sidecarContainers:
                           x-kubernetes-preserve-unknown-fields: true
@@ -3635,6 +3649,8 @@ spec:
                       type: string
                     type: object
                   clusterIP:
+                    type: string
+                  name:
                     type: string
                 type: object
               topologyReconciliation:
@@ -3827,6 +3843,8 @@ spec:
                         type: object
                       clusterIP:
                         type: string
+                      name:
+                        type: string
                     type: object
                   sidecarContainers:
                     x-kubernetes-preserve-unknown-fields: true
@@ -4007,6 +4025,8 @@ spec:
                           type: string
                         type: object
                       clusterIP:
+                        type: string
+                      name:
                         type: string
                     type: object
                   sidecarContainers:
